# local-models

./: README.md  justfile  pyproject.toml
local_models/: __main__.py  prompts.py
local_models/schema/: resume.py
local_models/train/: create_best_skills_response.py  create_raw_resumes.py  dataset_skills_csv.py  fine_tune_skills.py
resources/: CLAIRE LENGAGNE ETUDIANTE EN GOUVERNANCE.txt  Eliana Gagliano.txt
resources/dataset/: skills.parquet
resources/openai_skills/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  13.json  131.json  132.json  133.json  134.json  135.json  136.json  137.json  (+170 more)
resources/raw_resumes/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+956 more)
resources/resumes/: 06REBhEO77-9bVNT77-9YArvv73vnJHvv73vv73vv73vv71D77-9zI3vv73vv73vv73vv73vv71adg==  07ZP77-977-9Me-_vWh-77-9Dw7vv73vv73vv70P77-977-9ZGzvv73vv70hK--_vQHvv70TfO-_ve-_ve-_vQ==  07jvv71KcEE4HzA_VHfvv73vv73Uqljvv71I77-9fO-_vSQocnHvv70577-9de-_vQA=  0Zfvv70d77-9DDnvv73vv71p77-977-9Tjnvv73vv70i77-977-9Ne-_vXUC77-9Y1pT77-9aO-_ve-_vUw=  0oxK77-9Ue-_vQHvv73vv70877-91JhsXDHvv73vv71p77-9fe-_vTV_77-977-977-9cO-_vSFW  14Uf77-9Wu-_ve-_vUAyWO-_vUbvv70277-9RO-_vVfvv71uG--_vQ9eT--_vUZZ77-977-9W--_vQ==  15fvv73vv70y77-9NjXvv73vv70DeD8c77-9L--_ve-_vUshXu-_vQ_vv73vv71T77-9Ie-_vS9U77-9  1K5xLEFT77-9MTjvv70X77-977-9d2Hvv73vv71477-977-977-9O2pXbl8Z77-92aM=  1Zfvv70-E3Z3e--_ve-_vR_vv70677-9fkjvv71277-9FAdUEzLvv71m1osazK7vv70=  1anvv73vv71bx53vv73vv71f2o3vv71kQhbvv70-Jlzvv73vv70S77-977-9D--_ve-_vW3vv70=  1arvv73vv71ZEO-_vUEqyIjvv73vv73vv71o77-9AxYE77-9NgdyH-Cki3Xvv73vv73vv70D  1b0uWO-_vQTvv70sZF3vv71r77-9D3kBWwUbCi4LR3Pvv71wSO-_vXvvv70T77-9  (+988 more)
