[project]
name = "local-models"
version = "0.1.0"
description = ""
authors = [
    { name = "JulienStitelet", email = "julien.stitelet@careerbuilder.com" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "llama-cpp-python @ git+https://github.com/abetlen/llama-cpp-python.git@main",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "torch (>=2.7.1,<3.0.0)",
    "huggingface-hub (>=0.33.2,<0.34.0)",
    "langchain-pydantic-minifier (>=1.0.1,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "local_models", from = "src" }]


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
